--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.28.1",
+    "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +45,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-typescript": "^7.26.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.5",
+    "axios-mock-adapter": "^2.1.0",
+    "jest": "^27.5.1",
     "source-map-loader": "^5.0.0"
-  }
+  },
+  "jest": {
+  "transformIgnorePatterns": [
+    "/node_modules/(?!axios|some-other-package).+\\.js$"
+  ]
+}
+
 }
